# SimpleGuitarAmp

./: .gitignore  CMakeLists.txt  SimpleGuitarAmp.cpp  SimpleGuitarAmp.h  SimpleGuitarAmpEditor.cpp  SimpleGuitarAmpEditor.h
Resources/: info.txt
